2021-02-25  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ganymede/connect/Connect.java:
	Always start the Kernel @RestController.

	* Re-branded as Ganymede.

2021-02-24  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/galyleo/shell/magic/AbstractScriptEngineMagic.java,
	src/main/java/galyleo/shell/magic/Javascript.java:
	Initial writing.

	* src/main/java/galyleo/dependency/Resolver.java:
	Added working dependency resolution.

2021-02-23  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/galyleo/dependency/POM.java:
	Use org.eclipse.aether Dependency and RemoteRepository in
	interfaces.

	* src/main/java/galyleo/shell/Shell.java:
	In resolve(POM), update the JShell classpath with newly resolved
	files.

	* src/main/java/galyleo/dependency/Resolver.java:
	Provide classpath management.

	* src/main/java/galyleo/dependency/Analyzer.java:
	Use org.eclipse.aether.artifact.Artifact.

2021-02-22  Allen D. Ball  <ball@hcf.dev>

	* Interim check-in: Integrated Apache Maven Artifact Resolver.

2021-02-21  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/galyleo/dependency/Analyzer.java:
	Refactored to use POM.Dependency for Artifact implementation.

	* src/main/java/galyleo/shell/magic/AbstractMagic.java:
	Initial writing: Provides common PropertyPlaceholderHelper.

	* src/main/java/galyleo/shell/Shell.java:
	Propagate kernel VM "-D" arguments to the JShell VM options.

2021-02-20  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/galyleo/shell/Shell.java:
	Added classpath() method.

	* src/main/java/galyleo/shell/magic/Classpath.java,
	src/main/java/galyleo/shell/magic/SysProperties.java:
	Initial writing.

	* src/main/java/galyleo/shell/Magic.java:
	Provide static MagicMap member for receive(String,String,String)
	method.

2021-02-19  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/galyleo/server/Message.java:
	Added display_data Message.

	* Added "magics" Magic.

	* src/main/java/galyleo/install/Install.java:
	Define ${maven.repo.local} if installing into sysPrefix.
