@@ -1,5 +1,9 @@
 2021-02-25  Allen D. Ball  <ball@hcf.dev>
 
+	* Enable the Kernel @RestController.  Implement the print POST
+	method and use the method to move MIME bundles from the JShell to
+	the Kernel.
+
 	* src/main/java/ganymede/connect/Connect.java:
 	Always start the Kernel @RestController.
 
